SubBt/force-app/main/default/objects/Master_Budget_Line__c/Master_Budget_Line__c.object-meta.xml
<CustomObject>
    <label>Master Budget Line</label>
    <nameField>
        <displayFormat>BI - {000000}</displayFormat>
        <label>Master Budget Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Budget Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>