SubBt/force-app/main/default/objects/Master_Budget_Line__c/fields/Amount_In__c.field-meta.xml
<CustomField>
    <fullName>Amount_In__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount In</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>