SubBt/force-app/main/default/objects/Master_Budget_Line__c/fields/Budget_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Budget_Item_Name__c</fullName>
    <label>Budget Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>