SubBt/force-app/main/default/objects/Master_Budget_Line__c/fields/Forecast_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Forecast_To_Complete__c</fullName>
    <label>Forecast To Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>