SubBt/force-app/main/default/objects/Master_Budget_Line__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <formula>Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Text</label>
    <type>Text</type>
</CustomField>