SubBt/force-app/main/default/objects/Master_Budget_Line__c/fields/Master_Budget_Item__c.field-meta.xml
<CustomField>
    <fullName>Master_Budget_Item__c</fullName>
    <label>Master Budget Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>