SubBt/force-app/main/default/objects/Master_Budget_Line__c/fields/Master_Budget_Item_Group__c.field-meta.xml
<CustomField>
    <fullName>Master_Budget_Item_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grouping (Dep)</label>
    <referenceTo>Quote_Line_Group__c</referenceTo>
    <relationshipLabel>Master Budget Lines</relationshipLabel>
    <relationshipName>Master_Budget_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>