SubBt/force-app/main/default/objects/Master_Budget_Line__c/fields/Master_Budget_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Budget_Item_Number__c</fullName>
    <formula>HYPERLINK( &apos;/&apos;+Id, Master_Budget_Item__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Budget Item #</label>
    <type>Text</type>
</CustomField>