SubBt/force-app/main/default/objects/Master_Budget_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Master Budget Lines</relationshipLabel>
    <relationshipName>Master_Budget_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>