SubBt/force-app/main/default/objects/Master_Budget_Line__c/fields/Sub_Contract__c.field-meta.xml
<CustomField>
    <fullName>Sub_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub-Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Master Budget Lines</relationshipLabel>
    <relationshipName>Master_Budget_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>