SubBt/force-app/main/default/objects/Master_Budget_Line__c/fields/Trade_Type__c.field-meta.xml
<CustomField>
    <fullName>Trade_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade Type</label>
    <referenceTo>Trade_Type__c</referenceTo>
    <relationshipLabel>Master Budget Lines</relationshipLabel>
    <relationshipName>Master_Budget_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>