SubBt/force-app/main/default/objects/Master_Budget_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Master_Budget_Item_Number__c</columns>
    <columns>Master_Budget__c</columns>
    <columns>Budget_Item_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Cost_Code__c</columns>
    <columns>Group__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Product__c</columns>
    <columns>UOM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>